fix: avoid making issue cover too small on mobile

--- a/assets/css/screen.css
+++ b/assets/css/screen.css
@@ -2618,10 +2618,11 @@ figcaption b, figcaption strong {
     justify-content: start;
 }
 
-.gh-issue figure {
+.gh-issue img {
     border-radius: 0.125rem;
     box-shadow: rgba(0, 0, 0, 0.4) -0.125rem 0.125rem 0.25rem 0px;
-    width: 12rem;
+    width: 14rem;
+    min-width: 10rem;
 }
 
 .gh-issue-description {
